--- a/index.html
+++ b/index.html
@@ -10,9 +10,31 @@
 
         <link rel="stylesheet" href="./style/style.css" />
         <link rel="stylesheet" href="./style/reset.css" />
+        <link rel="stylesheet" href="./style/header.css" />
     </head>
     <body>
         <header>
+            <div class="promo-banner">
+                <img src="./image/IMAGE.svg" alt="" />
+            </div>
+            <div class="header">
+                <div class="container">
+                    <nav class="nav-header">
+                        <img src="./image/logo.svg" alt="Nude" />
+                        <ul>
+                            <li><a href="#">Lifetime ISA</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Pact</a></li>
+                            <li><a href="#">Purpose</a></li>
+                        </ul>
+                        <div class="mob-menu">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </nav>
+                </div>
+            </div>
         </header>
         <main>
             <div class="promo">
