add new section & breakpoints

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
         <meta name="keywords" content="HTML, CSS" />
         <meta name="author" content="Kristina Birukova" />
 
-        <link rel="stylesheet" href="./style/style.css" />
-        <link rel="stylesheet" href="./style/reset.css" />
-        <link rel="stylesheet" href="./style/header.css" />
+        <link rel="stylesheet" href="style/style.css" />
+        <link rel="stylesheet" href="style/reset.css" />
+        <link rel="stylesheet" href="style/header.css" />
+        <link rel="stylesheet" href="style/promo.css" />
+        <link rel="stylesheet" href="style/advantages.css" />
     </head>
     <body>
         <header>
             <div class="promo-banner">
-                <img src="./image/IMAGE.svg" alt="" />
+                <img src="image/IMAGE.svg" alt="" />
             </div>
             <div class="header">
                 <div class="container">
                     <nav class="nav-header">
-                        <img src="./image/logo.svg" alt="Nude" />
+                        <img src="image/logo.svg" alt="Nude" />
                         <ul>
                             <li><a href="#">Lifetime ISA</a></li>
                             <li><a href="#">Blog</a></li>
@@ -38,19 +40,91 @@
         </header>
         <main>
             <div class="promo">
+                <div class="container">
+                    <div class="promo-wrapper">
+                        <div class="content">
+                            <h1>
+                                Start building your first home deposit today
+                            </h1>
+                            <div class="partners">
+                                <img src="image/partner1.svg" alt="name" />
+                                <img src="image/partners2.png" alt="name" />
+                                <img src="image/partners3.png" alt="name" />
+                                <img src="image/partners2.png" alt="name" />
+                                <img src="image/partner1.svg" alt="name" />
+                                <img src="image/partners3.png" alt="name" />
+                                <img src="image/partners2.png" alt="name" />
+                                <img src="image/partner1.svg" alt="name" />
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="image/banner-mobile.png" alt="" />
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="advantages">
+                <img class="fragment" src="image/bg-fragment.svg" alt="">
+                <div class="container">
+                    <h2>So how can Nude help you?</h2>
+                    <p class="advantages-notes">
+                        Here are some of the many things our app can do for you.
+                    </p>
+                    <div class="card">
+                        <img src="image/IMAGE.png" alt="" />
+                        <div class="notes">
+                            <h4>Find out how much you need</h4>
+                            <p>
+                                Search any postcode in Britain and choose the
+                                type of property you want. Then, we use
+                                real-life house prices to show you how much you
+                                could need for your deposit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="image/IMAGE.png" alt="" />
+                        <div class="notes">
+                            <h4>Find out how much you need</h4>
+                            <p>
+                                Search any postcode in Britain and choose the
+                                type of property you want. Then, we use
+                                real-life house prices to show you how much you
+                                could need for your deposit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="image/IMAGE.png" alt="" />
+                        <div class="notes">
+                            <h4>Find out how much you need</h4>
+                            <p>
+                                Search any postcode in Britain and choose the
+                                type of property you want. Then, we use
+                                real-life house prices to show you how much you
+                                could need for your deposit.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="image/IMAGE.png" alt="" />
+                        <div class="notes">
+                            <h4>Find out how much you need</h4>
+                            <p>
+                                Search any postcode in Britain and choose the
+                                type of property you want. Then, we use
+                                real-life house prices to show you how much you
+                                could need for your deposit.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="functionality">
-            </div>
-            <div class="app">
-            </div>
-            <div class="slogan">
-            </div>
-            <div class="steps">
-            </div>
-            <div class="banner">
-            </div>
+            <div class="functionality"></div>
+            <div class="app"></div>
+            <div class="slogan"></div>
+            <div class="steps"></div>
+            <div class="banner"></div>
         </main>
         <footer></footer>
     </body>
