feat: add sass styles for new component steps && use BEM

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
     <head>
         <title>Landing page</title>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="Free Web tutorials" />
         <meta name="keywords" content="HTML, CSS" />
         <meta name="author" content="Kristina Birukova" />
-
         <link rel="stylesheet" href="style/style.css" />
         <link rel="stylesheet" href="style/reset.css" />
         <link rel="stylesheet" href="style/header.css" />
         <link rel="stylesheet" href="style/promo.css" />
         <link rel="stylesheet" href="style/advantages.css" />
+        <link rel="stylesheet" href="style/style.min.css" />
     </head>
     <body>
         <header>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="advantages">
-                <img class="fragment" src="image/bg-fragment.svg" alt="">
+                <img class="fragment" src="image/bg-fragment-mob.svg" alt="">
                 <div class="container">
                     <h2>So how can Nude help you?</h2>
                     <p class="advantages-notes">
@@ -123,8 +123,46 @@
             <div class="functionality"></div>
             <div class="app"></div>
             <div class="slogan"></div>
-            <div class="steps"></div>
-            <div class="banner"></div>
+            <div class="steps">
+                <div class="container">
+                    <div class="steps__carts">
+                        <div class="steps__cart cart">
+                            <h3 class="cart__title">Lifetime ISA</h3>
+                            <p class="cart__text">
+                                aka: The tax-free, government-boosted one. Save
+                                or invest up to £4,000 towards your deposit
+                                every year and score a 25% government bonus. All
+                                tax-free.
+                            </p>
+                            <a href="#" class="cart__link">Find out more</a>
+                        </div>
+                        <div class="steps__cart cart">
+                            <h3 class="cart__title">Lifetime ISA</h3>
+                            <p class="cart__text">
+                                aka: The tax-free, government-boosted one. Save
+                                or invest up to £4,000 towards your deposit
+                                every year and score a 25% government bonus. All
+                                tax-free.
+                            </p>
+                            <a href="#" class="cart__link">Find out more</a>
+                        </div>
+                        <div class="steps__cart cart">
+                            <h3 class="cart__title">Lifetime ISA</h3>
+                            <p class="cart__text">
+                                aka: The tax-free, government-boosted one. Save
+                                or invest up to £4,000 towards your deposit
+                                every year and score a 25% government bonus. All
+                                tax-free.
+                            </p>
+                            <a href="#" class="cart__link">Find out more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="banner">
+                <h2 class="banner__title">Let's get you unpacked</h2>
+                <img src="/image/BG-banner.jpg" alt="" />
+            </div>
         </main>
         <footer></footer>
     </body>
