add scss and some block

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <title>Landing page</title>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0 shrink-to-fit=no"
+        />
         <meta name="description" content="Free Web tutorials" />
         <meta name="keywords" content="HTML, CSS" />
         <meta name="author" content="Kristina Birukova" />
@@ -64,7 +67,7 @@
                 </div>
             </div>
             <div class="advantages">
-                <img class="fragment" src="image/bg-fragment-mob.svg" alt="">
+                <img class="fragment" src="image/bg-fragment-mob.svg" alt="" />
                 <div class="container">
                     <h2>So how can Nude help you?</h2>
                     <p class="advantages-notes">
@@ -160,8 +163,9 @@
                 </div>
             </div>
             <div class="banner">
-                <h2 class="banner__title">Let's get you unpacked</h2>
-                <img src="/image/BG-banner.jpg" alt="" />
+                <div class="container">
+                    <h2 class="banner__title">Let's get you unpacked</h2>
+                </div>
             </div>
         </main>
         <footer></footer>
