delete css and scss

--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
         <meta name="description" content="Free Web tutorials" />
         <meta name="keywords" content="HTML, CSS" />
         <meta name="author" content="Kristina Birukova" />
-        <link rel="stylesheet" href="style/style.css" />
         <link rel="stylesheet" href="style/reset.css" />
-        <link rel="stylesheet" href="style/header.css" />
-        <link rel="stylesheet" href="style/promo.css" />
-        <link rel="stylesheet" href="style/advantages.css" />
+        <link rel="stylesheet" href="style/style.css" />
         <link rel="stylesheet" href="style/style.min.css" />
     </head>
     <body>
@@ -49,6 +46,11 @@
                             <h1>
                                 Start building your first home deposit today
                             </h1>
+                            <p>
+                                Open a Nude savings or investment account, boost
+                                your deposit with government bonuses and get
+                                ideas to buy your home in record time.
+                            </p>
                             <div class="partners">
                                 <img src="image/partner1.svg" alt="name" />
                                 <img src="image/partners2.png" alt="name" />
@@ -127,6 +129,7 @@
             <div class="app"></div>
             <div class="slogan"></div>
             <div class="steps">
+                <img class="fragment" src="image/BG-green.svg" alt="" />
                 <div class="container">
                     <div class="steps__carts">
                         <div class="steps__cart cart">
